# nomnoms

./: .gitignore  README.md  examples
.github/workflows/: ci.yml
munch/: CMakeLists.txt  build.bat  configure.bat
munch/include/: hooman.h
munch/src/: hooman.cpp  main.cpp
noms/: CMakeLists.txt  build.bat  config.cmake.in  doit.sh  noms-config.cmake  noms-config.cmake.in  test
noms/fruit/: CMakeLists.txt  fruit-config.cmake.in
noms/fruit/include/noms/fruit/: apple.h
noms/fruit/src/: apple.cpp
noms/veg/: CMakeLists.txt  veg-config.cmake.in
noms/veg/include/noms/veg/: asparagus.h  asparugus.h
noms/veg/src/: asparagus.cpp
